# byhack2025

./: .gitignore  README.md  package-lock.json
GPT/: generate_dialog.py  generate_ending.py  guide.md
GPT/GPTAPI/: AnswerStructure.py  GPTrequest.py  Params.py  __init__.py  prompts.py
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  logging.yaml  pyproject.toml  requirements.txt  settings.example.yaml  settings.schema.yaml  settings.test.yaml
backend/GPT/: generate_dialog.py  generate_ending.py
backend/GPT/GPTAPI/: AnswerStructure.py  prompts.py
backend/TatarBy/: Char info.bru  List of characters.bru  Login.bru  Update.bru  bruno.json  create story.bru  generate ending.bru  get stories.bru  get story session.bru  insert char.bru  register.bru  start stiory.bru
backend/alembic/: env.py  script.py.mako
backend/migrations/: env.py
backend/migrations/versions/: 7ea5c9793696_changed_character_model.py  fad5e391abce_init.py
backend/src/: config.py  config_schema.py  logging_.py  prepare.py
backend/src/api/: __main__.py  app.py  dependencies.py  docs.py  exceptions.py  lifespan.py
backend/src/modules/characters/: repository.py  routes.py  schemas.py
backend/src/modules/stories/: dependencies.py  repository.py  routes.py  schemas.py
backend/src/modules/users/: repository.py  routes.py  schemas.py
backend/src/storages/sql/: dependencies.py  enums.py  models.py
frontend/: README.md  index.html  package-lock.json  package.json  tmp_btncss.txt  tmp_hdr.jsx
frontend/src/: App.jsx  i18n.js  main.jsx  styles.css
(+14 files in other folders)
